:bug: fixed code layout being aligned to center

--- a/_css/brand/_pygments.css
+++ b/_css/brand/_pygments.css
@@ -4,8 +4,10 @@
  */
 
 pre {
-    margin: 0;
-    text-align: center;
+    margin: auto;
+    text-align: left;
+    max-width: var(--column-width);
+    min-width: 300px;
 }
 
 .highlight {
